# impulse_playground

./: .build-constraints.txt  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  Makefile  NOTICE.md  README.md  format_code.sh  pyproject.toml
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/actions/jfrog-auth/: action.yml  jfrog-auth
.github/workflows/: acceptance.yml  release.yml
demos/: getting_started.ipynb  ml_feature_engineering.ipynb  reporting_pipeline.ipynb
demos/a2d2/: .gitignore  README.md  a2d2_analysis.ipynb  a2d2_event_verification.ipynb  a2d2_ingestion.ipynb  a2d2_object_detection.ipynb  a2d2_object_tracking.ipynb  databricks.yml
demos/a2d2/app/: app.yaml  requirements.txt
demos/data/ml/: channel_metrics.csv  channel_tags.csv  container_metrics.csv  container_tags.csv
demos/data/reporting/: channel_metrics.csv  channel_tags.csv  channels.csv  container_metrics.csv  container_tags.csv
docs/impulse/: README.md  docusaurus.config.ts  nginx.conf  package-lock.json  package.json  pydoc-markdown.yml  sidebars.ts  tailwind.config.ts
docs/impulse/docs/: demo.md  getting_started.md  motivation.md
src/impulse_query_engine/: common.py  measurement_db.py  schema.py  telemetry.py  util.py
src/impulse_reporting/aggregations/: aggregation.py  aggregation_types.py  histogram.py  histogram2d.py  stats_aggregator.py
src/impulse_reporting/config/: config_parser.py
src/impulse_reporting/core/: page.py  page_footer.py  page_header.py  report.py  report_utils.py
src/impulse_reporting/events/: basic_event.py  container_event.py  event.py  event_types.py  sequence_of_events.py
src/impulse_reporting/incremental/: __init__.py  container_detector.py  definition_hash_comparator.py
src/impulse_reporting/meta/: container_dimensions.py
src/impulse_reporting/persist/: fact_schema.py  report_storage.py
src/impulse_reporting/util/: event_instance_util.py  report_entity_util.py
src/mda_query_engine/: __init__.py  common.py  measurement_db.py  telemetry.py
src/mda_reporting/aggregations/: aggregation.py  aggregation_types.py  histogram.py  histogram2d.py  stats_aggregator.py
src/mda_reporting/config/: config_parser.py
src/mda_reporting/core/: page.py  report.py  report_utils.py
src/mda_reporting/events/: basic_event.py  container_event.py  event.py  event_types.py  sequence_of_events.py
src/mda_reporting/incremental/: __init__.py  definition_hash_comparator.py
src/mda_reporting/meta/: container_dimensions.py
src/mda_reporting/persist/: dimension_schema.py  fact_schema.py  report_storage.py
src/mda_reporting/util/: event_instance_util.py  report_entity_util.py
tests/: conftest.py
tests/data/basic_narrow_csv/: channel_data.csv  channel_data_without_rle.csv  container_metrics.csv
tests/data/config/: config.json  solver_config_test.json
tests/data/key_value_store_csv/: container_metrics.csv
tests/data/unit_test_csv/: 1_channel_metrics.csv  1_channels_without_rle.csv  1_container_tags.csv
tests/impulse_query_engine/integration/: kvs_solver_test.py  statistics_aggregator_test.py  stats_aggregator_test.py
tests/impulse_query_engine/unit/: telemetry_test.py
tests/impulse_reporting/: entrypoint.py
tests/impulse_reporting/integration/: batched_report_pipeline_test.py  channel_mapping_resolution_dimension_test.py  container_and_sequence_event_test.py  container_event_test.py  incremental_report_test.py  simple_report_test.py  statistics_test.py  test_helpers.py
tests/mda_query_engine/integration/: kvs_solver_test.py  statistics_aggregator_test.py  stats_aggregator_test.py
(+249 files in other folders)
